# gravity_simulator

./: CMakeLists.txt  README.md  main.cpp
framework/: CMakeLists.txt  main.cpp
framework/glad/include/glad/: glad.h
framework/glad/src/: glad.c
framework/res/: buffer.hpp  camera.hpp  input.hpp  shader.hpp  texture.hpp  transformations.hpp  window.hpp
framework/shaders/: fragment_shader.glsl  vertex_shader.glsl
framework/src/: buffer.cpp  camera.cpp  input.cpp  shader.cpp  texture.cpp  transformations.cpp  window.cpp
res/: object.hpp  shapes.hpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: object.cpp  shapes.cpp
